--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,8 @@
 
 *{
 	font-family: times, serif;
+	background-image: url('beige.jpeg');
+	background-size: cover;
 }
 
 /* Application.html.erb Styling */
